--- a/src/javaapplication31/view/MapPrincipalView.form
+++ b/src/javaapplication31/view/MapPrincipalView.form
@@ -174,6 +174,7 @@
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
               <Format format="##/##/####" subtype="-1" type="5"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="15/06/2019"/>
             <Property name="toolTipText" type="java.lang.String" value="Informe a data inicial"/>
           </Properties>
         </Component>
@@ -182,6 +183,7 @@
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
               <Format format="##/##/####" subtype="-1" type="5"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="30/07/2019"/>
             <Property name="toolTipText" type="java.lang.String" value="Informe a data final"/>
           </Properties>
         </Component>
